# keycloak-token-inspector

./: .env.example  .gitignore  README.md  cli.py  main.py  pyproject.toml  token_test.py  user-roles.py
src/cli/: __init__.py  main.py  user_roles.py
