[project]
name = "keycloak-token-inspector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "environs>=14.6.0",
    "pyjwt>=2.11.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[project.scripts]
# CLI entrypoint so `uv run keycloak-....` can find the programs
keycloak-token-inspector = "cli:token_inspector"
keycloak-user-roles = "cli:user_roles"

[tool.uv]
package = true
